Stop time from jumping around
The time jumps around because of the font character size. This change
ensures that the time will not jump around due to the different
character widths.

--- a/style.css
+++ b/style.css
@@ -47,8 +47,10 @@ footer {
     display: flex;
 }
 
-#time {
+#clock p {
     font-size: 16rem;
+    font-variant-numeric: tabular-nums lining-nums;
+    font-weight: 600;
 }
 
 .seconds {
